Barra de navegacao

--- a/InputPagamentos.html
+++ b/InputPagamentos.html
@@ -13,6 +13,7 @@
     <h1>Entrada de Pagamentos</h1>
     <main id="main">
       <p>
+        <a href="/teste.html">teste</a>
         <label for="input-date">Data:</label>
         <input id="input-date" value="20/08/2022" type="text" />
       </p>
@@ -48,6 +49,7 @@
       <p>
         <h2>Tabela de Pagamentos</h2>
       </p>
+      <div id="div-table"></div>
     </main>
     <link rel="stylesheet" href="./css/style.css" />
     <script defer src="./js/scriptTabela.js"></script>
