--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <title>Controle de Dinheiro</title>
   </head>
   <body>
+    <header>
+      <nav class="navigation">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+    </header>
     <main id="main">
       <!-- <p>
         <a id="button-link" href="./InputPagamentos.html">Entrada de Pagamentos</a>
